# http_server

./: .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  compile_commands.json  docker-compose.yml  hello.html  home.html  http_server  http_server.c  http_server.h  http_server.sh  readme.md  ring_buffer.c  ring_buffer.h  server  tasks.md  test  test.c
include/: http_server.h  ring_buffer.h  thread_pool.h
src/: http_server.c  main.c  thread_pool.c
